# mall_server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: main.rs
src/common/: constants.rs  mod.rs  types.rs
src/common/secret/: mod.rs
src/control/: amap.rs  app_data.rs  email.rs  frequency.rs  jobs.rs  mod.rs  sms.rs  wx_delivery.rs  wx_info.rs
src/db/: mod.rs  mysql_conn.rs  redis_conn.rs
src/middleware/: auth.rs  ip.rs  logs.rs  mod.rs  module.rs
src/routes/: common.rs  login.rs  mod.rs  test.rs  upload.rs  ws.rs
src/routes/article/: category.rs  content.rs  mod.rs  stat.rs
src/routes/mall/: attr.rs  brand.rs  cat.rs  coupon.rs  mod.rs  order.rs  product.rs  product_file.rs  product_group.rs  store.rs  write_off.rs
src/routes/manage/: common.rs  mod.rs  system.rs  user.rs
src/routes/manage/article/: article.rs  article_cat.rs  mod.rs
src/routes/manage/mall/: attr.rs  brand.rs  cat.rs  coupon.rs  mod.rs  order.rs  product.rs  product_file.rs  store.rs
src/routes/manage/que_form/: ans.rs  mod.rs  que.rs
src/routes/manage/sales/: mod.rs  records.rs  sales.rs
src/routes/pay/: make.rs  mod.rs  notify.rs
src/routes/que_form/: mod.rs  que_form.rs
src/routes/sales/: invite.rs  list.rs  mod.rs
src/routes/user/: addr.rs  collect.rs  coupon.rs  credential.rs  feedback.rs  mod.rs  pocket.rs
src/routes/utils_set/: hash_set.rs  mall_set.rs  mod.rs  pocket_set.rs  sales_set.rs  tran_set.rs  user_set.rs  write_off_item.rs
src/utils/: crypto.rs  files.rs  filter.rs  html.rs  jwt.rs  mod.rs  qrcode.rs  random.rs  time.rs  utils.rs
