[package]
name = "mall_server"
version = "0.6.4"
edition = "2024"

[dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }
actix = "0.13.5"
actix-ws = "0.3.0"
actix-web = "4.10.2"
actix-web-actors = "4.3.0"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
actix-jobs = "0.1.7"
sanitize-filename = "0.6.0"
redis = "0.29.5"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-aux = "=4.6.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
rand = "0.9.0"
bcrypt = "0.17.0"
regex = "1.11.1"
log = "0.4.27"
env_logger = "0.11.8"
wx_pay = "0.2.3"
mysql_quick = "2.0.0"
futures-util = "0.3.31"
pin-project = "1.1.10"
tracing-actix-web = "0.7.18"
tracing = "0.1.41"
derive_more = "0.99.19"
libaes = "0.7.0"
base64 = "0.22.1"
lettre = "0.11.15"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
aliyun-oss-rust-sdk = "0.2.1"
anyhow = "1.0.97"
snowflaker = "0.3.6"
sms = "0.1.9"
simple-tencent-sms = "0.1.2"
sha1 = "0.10.6"
uuid = { version = "1.17.0", features = ["v4"] }
img_comp = "1.0.3"
scraper = "0.23.1"
strum = "0.27.1"
strum_macros = "0.27.1"
fast_qr = { version = "0.13.1", features = ["image"] }

[features]
doc = []
